# artifacts/api-server/src/routes/index.ts
@@ -2,13 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import interviewsRouter from "./interviews";
 import analyticsRouter from "./analytics";
-import questionsRouter from "./questions";
+import plansRouter from "./plans";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use("/interviews", interviewsRouter);
 router.use("/analytics", analyticsRouter);
-router.use("/questions", questionsRouter);
+router.use("/plans", plansRouter);
 
 export default router;
